--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ hyper = { version = "0.14.14", features = ["full"] }
 tokio = { version = "1.13", features = ["full"] }
 quote = "1.0.10"
 syn = { version = "1.0.81", features = ["full"] }
+validator = { version = "0.12", features = ["derive"] }
 serde = { version = "1.0.130", features = ["derive"] }
 serde_json = "1.0.68"
+anyhow = "1.0.45"
+mockall = "0.10.2"
+lazy_static = "1.4.0"
