--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,4 @@ serde_json = "1.0.68"
 anyhow = "1.0.45"
 mockall = "0.10.2"
 lazy_static = "1.4.0"
-tokio = { version = "1.13", features = ["full"] }
-poem = "1.0.23"
+actix-web = "3.3.2"
