--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,7 @@
 [package]
-name = "rust-hyper-sample"
+name = "rust-clean-architecture"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-#hyper = { version = "0.14.14", features = ["full"] }
-
 
 [dependencies]
 quote = "1.0.10"
